--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,89 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      firstbook
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="cards-bg social-cards">
+  <ion-card>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/me-icon.png">
+      </ion-avatar>
+      <h2>Theerawat Burawat</h2>
+      <p>November 5, 1955</p>
+    </ion-item>
+  
+    <img src="https://ionicframework.com/dist/preview-app/www/assets/img/advance-card-bttf.png">
+  
+    <ion-card-content>
+      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button color="primary" clear small icon-start>
+          <ion-icon name='thumbs-up'></ion-icon>
+          12 Likes
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button color="primary" clear small icon-start>
+          <ion-icon name='text'></ion-icon>
+          4 Comments
+        </button>
+      </ion-col>
+      <ion-col align-self-center text-center>
+        <ion-note>
+          11h ago
+        </ion-note>
+      </ion-col>
+    </ion-row>
+  
+  </ion-card>
+  
+  
+  <ion-card>
+  
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="assets/imgs/me-icon.png">
+      </ion-avatar>
+      <h2>Theerawat Burawat</h2>
+      <p>May 12, 1984</p>
+    </ion-item>
+  
+    <img src="https://ionicframework.com/dist/preview-app/www/assets/img/advance-card-bttf.png">
+  
+    <ion-card-content>
+      <p>I face the unknown future, with a sense of hope. Because if a machine, a Terminator, can learn the value of human life, maybe we can too.</p>
+    </ion-card-content>
+  
+    <ion-row>
+      <ion-col>
+        <button ion-button color="primary" clear small icon-start>
+          <ion-icon name='thumbs-up'></ion-icon>
+          30 Likes
+        </button>
+      </ion-col>
+      <ion-col>
+        <button ion-button color="primary" clear small icon-start>
+          <ion-icon name='text'></ion-icon>
+          64 Comments
+        </button>
+      </ion-col>
+      <ion-col align-self-center text-center>
+        <ion-note>
+          30yr ago
+        </ion-note>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+
+  <ion-fab right bottom>
+    <button ion-fab color="danger"><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
