add autosize textarea

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -83,7 +83,7 @@
     </ion-row>
   </ion-card>
 
-  <ion-fab right bottom>
+  <ion-fab right bottom (click)="goPostPage()">
     <button ion-fab color="danger"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
