home: retrieve data from web api

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content class="cards-bg social-cards">
-  <ion-card>
+  <!-- <ion-card>
 
     <ion-item>
       <ion-avatar item-start>
@@ -43,25 +43,20 @@
       </ion-col>
     </ion-row>
   
-  </ion-card>
+  </ion-card> -->
   
-  
-  <ion-card>
-  
+  <ion-card *ngFor="let post of posts">
     <ion-item>
       <ion-avatar item-start>
-        <img src="assets/imgs/me-icon.png">
+          <img src="assets/imgs/me-icon.png">
       </ion-avatar>
       <h2>Theerawat Burawat</h2>
       <p>May 12, 1984</p>
     </ion-item>
-  
-    <img src="https://ionicframework.com/dist/preview-app/www/assets/img/advance-card-bttf.png">
-  
+    <img [src]="post.img">
     <ion-card-content>
-      <p>I face the unknown future, with a sense of hope. Because if a machine, a Terminator, can learn the value of human life, maybe we can too.</p>
+      <p>{{post.desc}}</p>
     </ion-card-content>
-  
     <ion-row>
       <ion-col>
         <button ion-button color="primary" clear small icon-start>
