--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,51 +7,13 @@
 </ion-header>
 
 <ion-content class="cards-bg social-cards">
-  <!-- <ion-card>
-
-    <ion-item>
-      <ion-avatar item-start>
-        <img src="assets/imgs/me-icon.png">
-      </ion-avatar>
-      <h2>Theerawat Burawat</h2>
-      <p>November 5, 1955</p>
-    </ion-item>
-  
-    <img src="https://ionicframework.com/dist/preview-app/www/assets/img/advance-card-bttf.png">
-  
-    <ion-card-content>
-      <p>Wait a minute. Wait a minute, Doc. Uhhh... Are you telling me that you built a time machine... out of a DeLorean?! Whoa. This is heavy.</p>
-    </ion-card-content>
-  
-    <ion-row>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-start>
-          <ion-icon name='thumbs-up'></ion-icon>
-          12 Likes
-        </button>
-      </ion-col>
-      <ion-col>
-        <button ion-button color="primary" clear small icon-start>
-          <ion-icon name='text'></ion-icon>
-          4 Comments
-        </button>
-      </ion-col>
-      <ion-col align-self-center text-center>
-        <ion-note>
-          11h ago
-        </ion-note>
-      </ion-col>
-    </ion-row>
-  
-  </ion-card> -->
-  
   <ion-card *ngFor="let post of posts">
     <ion-item>
       <ion-avatar item-start>
           <img src="assets/imgs/me-icon.png">
       </ion-avatar>
       <h2>Theerawat Burawat</h2>
-      <p>May 12, 1984</p>
+      <p>{{post.createDatetime | date:'MMM d, y'}}</p>
     </ion-item>
     <img [src]="post.img">
     <ion-card-content>
@@ -72,7 +34,7 @@
       </ion-col>
       <ion-col align-self-center text-center>
         <ion-note>
-          30yr ago
+          5m ago
         </ion-note>
       </ion-col>
     </ion-row>
